--- a/People and Face/README
+++ b/People and Face/README
@@ -1,6 +1,6 @@
 ## Dataset:
-- **Players Detection**: https://universe.roboflow.com/mohamed-traore-2ekkp/face-detection-mik1i/dataset/15
-- **Match Clip**: https://www.pexels.com/search/videos/people%20walking/
+- **Faces Detection**: https://universe.roboflow.com/mohamed-traore-2ekkp/face-detection-mik1i/dataset/15
+- **Peple walking Clip**: https://www.pexels.com/search/videos/people%20walking/
 
 ## Getting Started
 
